<resources>
    <string name="app_name">Victor Vargas Code Test</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="zipcode">Zip Code</string>
    <string name="save">Save person</string>
    <string name="required">This Field is required</string>
    <string name="new_person_title">New person</string>
    <string name="new_person_text">Create new person</string>
    <string name="edit_person_text">Edit person</string>
    <string name="delete_question">Are you sure you want delete this person?</string>
    <string name="no_list_text">There is not persons in the database. \nAdd one in the button on top right.</string>
    <string name="person_exist">The person already exist in the database.</string>
</resources>
