<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.victorvargascodetest.EditPerson">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:id="@+id/first_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:id="@+id/last_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:id="@+id/phone_number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/texto_input_layout"
                android:layout_width="match_parent"
                android:hint="@string/date_of_birth"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:hint="@string/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:id="@+id/zipcode"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_gravity="right"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
